--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,34 +8,34 @@ permissions:
   contents: read  #  to fetch code (actions/checkout)
 
 jobs:
-  linux:
-    name: Linux (.NET 6.0)
-    runs-on: ubuntu-22.04
+#  linux:
+#    name: Linux (.NET 6.0)
+#    runs-on: ubuntu-22.04
 
-    steps:
-      - name: Clone Repository
-        uses: actions/checkout@v3
+#    steps:
+#      - name: Clone Repository
+#        uses: actions/checkout@v3
+#
+#      - name: Install .NET 6.0
+#        uses: actions/setup-dotnet@v3
+#        with:
+#          dotnet-version: '6.0.x'
 
-      - name: Install .NET 6.0
-        uses: actions/setup-dotnet@v3
-        with:
-          dotnet-version: '6.0.x'
+#      - name: Prepare Environment
+#        run: |
+#          . mod.config;
+#          awk '/\r$$/ { exit(1); }' mod.config || (printf "Invalid mod.config format. File must be saved using unix-style (LF, not CRLF or CR) line endings.\n"; exit 1);
 
-      - name: Prepare Environment
-        run: |
-          . mod.config;
-          awk '/\r$$/ { exit(1); }' mod.config || (printf "Invalid mod.config format. File must be saved using unix-style (LF, not CRLF or CR) line endings.\n"; exit 1);
+#      - name: Check Code
+#        run: |
+#          make check
+#          make check-packaging-scripts
 
-      - name: Check Code
-        run: |
-          make check
-          make check-packaging-scripts
-
-      - name: Check Mod
-        run: |
-          sudo apt-get install lua5.1
-          make check-scripts
-          make TREAT_WARNINGS_AS_ERRORS=true test
+#      - name: Check Mod
+#        run: |
+#          sudo apt-get install lua5.1
+#          make check-scripts
+#          make TREAT_WARNINGS_AS_ERRORS=true test
 
   linux-mono:
     name: Linux (mono)
